--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "@inertiajs/inertia-vue3": "^0.6.0",
         "@inertiajs/progress": "^0.2.7",
         "@inertiajs/server": "^0.1.0",
+        "@tailwindcss/aspect-ratio": "^0.4.0",
         "@tailwindcss/forms": "^0.5.2",
         "@vitejs/plugin-vue": "^2.3.3",
         "@vue/server-renderer": "^3.2.31",
@@ -20,5 +21,15 @@
         "tailwindcss": "^3.1.0",
         "vite": "^2.9.11",
         "vue": "^3.2.31"
+    },
+    "dependencies": {
+        "@alch/alchemy-sdk": "^1.0.8",
+        "@fortawesome/fontawesome-free": "^6.1.1",
+        "@fortawesome/fontawesome-svg-core": "^6.1.1",
+        "@fortawesome/free-brands-svg-icons": "^6.1.1",
+        "@fortawesome/free-regular-svg-icons": "^6.1.1",
+        "@fortawesome/free-solid-svg-icons": "^6.1.1",
+        "@fortawesome/vue-fontawesome": "^3.0.1",
+        "moralis": "^1.8.1"
     }
 }
